--- a/_posts/2019-4-27-Hello.md
+++ b/_posts/2019-4-27-Hello.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Hello
+author: Charles Thomas
 ---
 
 Hello, this is the start of my new blog. I am a software developer and a student in my final year of High School. Here I will be documenting any interesting things I learn, whether in school or out of it.
